==> RT-Thread/rt-thread/bsp/allwinner/libraries/drivers/drv_uart.c <==
#include <rthw.h>
#include <rtdevice.h>
#include "board.h"
#include "drv_uart.h"
#include <stdio.h>
#define DBG_TAG "DRV.UART"
#define DBG_LVL DBG_WARNING
#include <rtdbg.h>
#include <hal_clk.h>
#include <hal_reset.h>
#include <hal_gpio.h>
#define UART_DEFAULT_BAUDRATE 500000
#define UART0_TX GPIOB(8)
#define UART0_TX_FUNCTION 6
#define UART0_TX GPIOE(2)
#define UART0_TX_FUNCTION 6
#define UART0_TX GPIOF(2)
#define UART0_TX_FUNCTION 3
#define UART0_RX GPIOB(9)
#define UART0_RX_FUNCTION 6
#define UART0_RX GPIOE(3)
#define UART0_RX_FUNCTION 6
#define UART0_RX GPIOF(4)
#define UART0_RX_FUNCTION 3
#define UART1_TX GPIOD(21)
#define UART1_TX_FUNCTION 4
#define UART1_TX GPIOE(10)
#define UART1_TX_FUNCTION 3
#define UART1_TX GPIOG(6)
#define UART1_TX_FUNCTION 3
#define UART1_TX GPIOG(12)
#define UART1_TX_FUNCTION 7
#define UART1_RX GPIOD(22)
#define UART1_RX_FUNCTION 4
#define UART1_RX GPIOE(11)
#define UART1_RX_FUNCTION 3
#define UART1_RX GPIOG(7)
#define UART1_RX_FUNCTION 3
#define UART1_RX GPIOG(13)
#define UART1_RX_FUNCTION 7
#define UART2_TX GPIOD(1)
#define UART2_TX_FUNCTION 5
#define UART2_TX GPIOE(2)
#define UART2_TX_FUNCTION 3
#define UART2_RX GPIOD(2)
#define UART2_RX_FUNCTION 5
#define UART2_RX GPIOE(3)
#define UART2_RX_FUNCTION 3
#define UART3_TX GPIOB(6)
#define UART3_TX_FUNCTION 7
#define UART3_TX GPIOC(6)
#define UART3_TX_FUNCTION 4
#define UART3_TX GPIOD(10)
#define UART3_TX_FUNCTION 5
#define UART3_TX GPIOE(8)
#define UART3_TX_FUNCTION 5
#define UART3_TX GPIOG(0)

static rt_err_t _uart_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct sunxi_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    serial->config = *cfg;
    uart = serial->parent.user_data;

    uart_set_format(uart->uart_port, cfg->data_bits, cfg->stop_bits, cfg->parity);
    uart_set_baudrate(uart->uart_port, cfg->baud_rate);
    uart_set_fifo(uart->uart_port);
    uart_forcechange(uart->uart_port);

    return RT_EOK;
}

static rt_err_t _uart_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct sunxi_uart *uart;
    rt_uint32_t channel = 1;
#ifdef RT_USING_SERIAL_V2
    rt_ubase_t ctrl_flag = 0;
    rt_ubase_t ctrl_arg;
#endif

    uart = serial->parent.user_data;

    RT_ASSERT(uart != RT_NULL);
    RT_ASSERT(channel != 3);

#ifdef RT_USING_SERIAL_V2
    ctrl_arg = (rt_ubase_t)arg;

    if (ctrl_arg & (RT_DEVICE_FLAG_RX_BLOCKING | RT_DEVICE_FLAG_RX_NON_BLOCKING))
    {
        ctrl_flag |= RT_DEVICE_FLAG_INT_RX;
    }
    else if (ctrl_arg & (RT_DEVICE_FLAG_TX_BLOCKING | RT_DEVICE_FLAG_TX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_TX)
        {
            ctrl_flag = RT_DEVICE_FLAG_DMA_TX;
        }
        else
        {
            ctrl_flag = RT_DEVICE_FLAG_INT_TX;
        }
    }
#endif

    LOG_D("uart%d control cmd:%x, arg:%x\n", uart->uart_port, cmd, ctrl_arg);

    switch (cmd)
    {
    case RT_DEVICE_CTRL_CLR_INT:
#ifdef RT_USING_SERIAL_V2
        if (ctrl_flag & RT_DEVICE_FLAG_INT_RX)
#else
        if ((size_t)arg == RT_DEVICE_FLAG_INT_RX)
#endif
        {
            uart_set_isr(uart->uart_port, 0, UART_IER_RDI | UART_IER_RLSI);
        }
        break;

    case RT_DEVICE_CTRL_SET_INT:
#ifdef RT_USING_SERIAL_V2
        if (ctrl_flag & RT_DEVICE_FLAG_INT_RX)
#else
        if ((size_t)arg == RT_DEVICE_FLAG_INT_RX)
#endif
        {
            uart_set_isr(uart->uart_port, 1, UART_IER_RDI | UART_IER_RLSI);
        }
        break;
#ifdef RT_USING_SERIAL_V2
    case RT_DEVICE_CTRL_CONFIG:
        if (ctrl_flag & RT_DEVICE_FLAG_INT_RX)
        {
            uart_set_isr(uart->uart_port, 1, UART_IER_RDI | UART_IER_RLSI);
        }
        break;

    case RT_DEVICE_CHECK_OPTMODE:
        if (ctrl_flag & RT_DEVICE_FLAG_DMA_TX)
        {
            return RT_SERIAL_TX_BLOCKING_NO_BUFFER;
        }
        else
        {
            return RT_SERIAL_TX_BLOCKING_BUFFER;
        }
#endif /* RT_USING_SERIAL_V2 */
    }

    return (RT_EOK);
}

static int _uart_putc(struct rt_serial_device *serial, char c)
{
    struct sunxi_uart *uart;
    size_t uart_base;

    uart = serial->parent.user_data;

    uart_base = SUNXI_UART0_BASE + uart->uart_port * 0x400;

    /* FIFO status, contain valid data */
    while (!(hal_readl(uart_base + UART_USR) & UART_USR_TFNF))
        ;

    hal_writeb(c, uart_base + UART_THR);

    // wait TX FIFO and the TX shift Register are empty.
    while (!(hal_readl(uart_base + UART_LSR) & UART_LSR_TEMT))
        ;

    return 1;
}

static int _uart_getc(struct rt_serial_device *serial)
{
    struct sunxi_uart *uart;
    size_t uart_base;
    int data = -1;

    uart = serial->parent.user_data;
    uart_base = SUNXI_UART0_BASE + uart->uart_port * 0x400;

    while (!(hal_readl(uart_base + UART_RFL) & 0x1FFu))
        ;

    /* Receive Data Available */
    if (hal_readl(uart_base + UART_USR) & UART_USR_RFNE)
    {
        data = hal_readb(uart_base + UART_RBR);
    }

    return data;
}

static void uart_irq_handler(int vector, void *param)
{
    size_t uart_base;
    uint32_t iir, lsr;
    struct rt_serial_device *serial;
    struct sunxi_uart *uart;

    LOG_D("serial3:%p, uart3:%p\n", &serial3, &uart3);
    serial = (struct rt_serial_device *)param;
    uart = (struct sunxi_uart *)serial->parent.user_data;

    LOG_D("isr serial:%p, uart:%p, name:%s\n", serial, uart, serial->parent.parent.name);

    uart_base = SUNXI_UART0_BASE + uart->uart_port * 0x400;
    iir = hal_readb(uart_base + UART_IIR) & UART_IIR_IID_MASK;
    lsr = hal_readb(uart_base + UART_LSR);

    LOG_D("IRQ uart%d lsr is %08x \n", uart->uart_port, lsr);
    if (iir == UART_IIR_IID_BUSBSY)
    {
        (void)hal_readb(uart_base + UART_USR);

        /*
         * Before reseting lcr, we should ensure than uart is not in busy
         * state. Otherwise, a new busy interrupt will be introduced.
         * It is wise to set uart into loopback mode, since it can cut down the
         * serial in, then we should reset fifo(in my test, busy state
         * (UART_USR_BUSY) can't be cleard until the fifo is empty).
         */
        hal_writeb(hal_readb(uart_base + UART_MCR) | UART_MCR_LOOP, uart_base + UART_MCR);

        hal_writeb(UART_FCR_FIFO_EN, uart_base + UART_FCR);
        hal_writeb(UART_FCR_TXFIFO_RST | UART_FCR_RXFIFO_RST | UART_FCR_FIFO_EN, uart_base + UART_FCR);
        hal_writeb(0, uart_base + UART_FCR);

        uart_set_fifo(uart->uart_port);
        (void)hal_readb(uart_base + UART_FCR);

        hal_writeb(hal_readb(uart_base + UART_MCR) & ~UART_MCR_LOOP, uart_base + UART_MCR); /* exit loopback mode. */
    }
    else
    {
        if (lsr & (UART_LSR_DR | UART_LSR_BI))
        {
#ifdef RT_USING_SERIAL_V2
            struct rt_serial_rx_fifo *rx_fifo;
            uint8_t data;

            rx_fifo = (struct rt_serial_rx_fifo *)serial->serial_rx;
            RT_ASSERT(rx_fifo != RT_NULL);

            do
            {
                data = hal_readb(uart_base + UART_RBR);
                rt_ringbuffer_putchar(&(rx_fifo->rb), data);
                lsr = hal_readb(uart_base + UART_LSR);
            } while (lsr & UART_LSR_DR);

#endif

            rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        }
        else if (iir & UART_IIR_IID_CHARTO)
        /* has charto irq but no dr lsr? just read and ignore */
        {
            hal_readb(uart_base + UART_RBR);
        }

        /* if (lsr & UART_LSR_THRE)
        {
            uart_handle_tx(uart_port);
        }*/
    }

    if (iir == UART_IIR_IID_THREMP)
    {
        uart_set_isr(uart->uart_port, 0, UART_IER_THRI);
        rt_completion_done(&(uart->tx_fifo_empty));
    }
}

static int uart_init(const char *name, struct sunxi_uart *uart, struct rt_serial_device *serial)
{
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;

    uart_clk_init(uart->uart_port, 1);
    uart_pinctrl_init(uart->uart_port);

    serial->ops = &_uart_ops;
    serial->config = config;
    serial->config.rx_bufsz = 256;
    serial->config.tx_bufsz = 0;
    serial->config.baud_rate = UART_DEFAULT_BAUDRATE;

    if (strcmp(name, RT_CONSOLE_DEVICE_NAME) == 0)
    {
        uart->uart_dma_flag = 0;
        rt_hw_serial_register(serial, name, RT_DEVICE_FLAG_STREAM | RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX, uart);
    }
    else
    {
        uart->uart_dma_flag = RT_DEVICE_FLAG_DMA_TX;
        rt_hw_serial_register(serial, name, RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX, uart);
    }

    rt_hw_interrupt_install(uart->irqno, uart_irq_handler, serial, name);
    rt_hw_interrupt_umask(uart->irqno);

    return 0;
}

int rt_hw_uart_init(void)
{
#ifdef BSP_USING_UART0
    uart_init("uart0", &uart0, &serial0);
#endif

#ifdef BSP_USING_UART1
    uart_init("uart1", &uart1, &serial1);
#endif

#ifdef BSP_USING_UART2
    uart_init("uart2", &uart2, &serial2);
#endif

#ifdef BSP_USING_UART3
    uart_init("uart3", &uart3, &serial3);
#endif

#ifdef BSP_USING_UART4
    uart_init("uart4", &uart4, &serial4);
#endif

#ifdef BSP_USING_UART5
    uart_init("uart5", &uart5, &serial5);
#endif

    return 0;
}
